# MIDI-Windows-Controller

./: Cargo.toml  bacon.toml
src/: controls.rs  error.rs  main.rs  utils.rs
src/controls/: trigger.rs
