[package]
name = "midi-windows-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = "0.30.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.54"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
]
