[package]
name = "midi-windows-controller"
version = "0.1.0"
edition = "2021"
default-run = "midi-windows-controller"

[dependencies]
derive_more = "0.99.17"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
env_logger = "0.11.3"
log = "0.4.21"
midir = "0.10.0"
midly = "0.5.3"
oneshot = "0.1.7"
slotmap = "1.0.7"
smallvec = { version = "1.13.2", features = ["union", "write"] }
static_assertions = "1.1.0"
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = "0.30.6"
windows-core = "0.57.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.57"
features = [
    "implement",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]

